--- a/app/partials/side-bar.html
+++ b/app/partials/side-bar.html
@@ -24,15 +24,15 @@
                         </li>
 
                         <li class="nav-header">
-                            <div class="dropdown profile-element"> 
+                            <div class="dropdown profile-element">
                                 <a data-toggle="dropdown" class="dropdown-toggle">
-                                    <span class="clear"> 
-                                        <span class="block m-t-xs"> <strong class="font-bold">{{company}}</strong></span> 
-                                        <span class="text-muted text-xs block">{{name}} {{surname}}</span> 
-                                        <span class="text-muted text-xs block">{{title}}<b class="caret"></b></span> 
-                                    </span> 
+                                    <span class="clear">
+                                        <span class="block m-t-xs"> <strong class="font-bold">{{company}}</strong></span>
+                                        <span class="text-muted text-xs block">{{name}} {{surname}}</span>
+                                        <span class="text-muted text-xs block">{{title}}<b class="caret"></b></span>
+                                    </span>
                                 </a>
-                                
+
                                 <ul class="dropdown-menu animated fadeInRight m-t-xs">
                                     <li><a data-toggle="modal"  ng-click="openEditProfil(true)">Profile</a></li>
                                     <!-- <li><a >Settings</a></li> -->
@@ -40,7 +40,7 @@
                                     <li><a ng-click="logout()">Log out</a></li>
                                 </ul>
                         </div>
-                        
+
                         </li>
 
                     <!--Mini Navbar Account-->
@@ -54,7 +54,7 @@
                         </ul>
                     </li>
                     <!--End-->
-                
+
                     <li ng-click="openclosetab('projecttab')" ng-class="{'active':(projectactive)}" activate-tab>
                         <a><i class="fa fa-clone"></i> <span class="nav-label">Projects</span> <span class="fa arrow"></span></a>
                         <ul id="projecttab" class="nav nav-second-level collapse" >
@@ -72,12 +72,12 @@
                         <a ><i class="fa fa-comments"></i> <span class="nav-label">Messages</span> <span class="label label-danger pull-right">{{totalmessages}}</span></span></a>
                         <ul id="messagetab" class="nav nav-second-level collapse">
                             <li  ng-repeat='channel in channels'><a href="#/messaging/{{channel.project_id}}/{{channel.id}}"><span class="nav-label">{{channel.name}}</span> <span class="label label-default pull-right">{{channel.newmessages}}</span></a></li>
-                        </ul> 
+                        </ul>
                     </li>
 
-                    
 
-                   
+
+
 
                     <li  ng-class="{'active':(cuseractive)}" activate-tab>
                         <a href="#/cuser"><i class="fa fa-users"></i> <span class="nav-label">User</span></a>
@@ -95,9 +95,12 @@
                         </ul>
                     </li>
 
-                   
+                    <li  ng-class="{'active':(cuseractive)}" activate-tab>
+                        <a href="#/invoice"><i class="fa fa-arrow-right"></i> <span class="nav-label">Invoice</span></a>
+                    </li>
 
-                     
+
+
 
                 </ul>
                 <ul class="nav metismenu" id="side-menu" ng-if="isAdmin">
@@ -120,15 +123,15 @@
                         </li>
 
                         <li class="nav-header">
-                            <div class="dropdown profile-element"> 
+                            <div class="dropdown profile-element">
                                 <a data-toggle="dropdown" class="dropdown-toggle">
-                                    <span class="clear"> 
-                                        <span class="block m-t-xs"> <strong class="font-bold">{{company}}</strong></span> 
-                                        <span class="text-muted text-xs block">{{name}} {{surname}}</span> 
-                                        <span class="text-muted text-xs block">{{title}}<b class="caret"></b></span> 
-                                    </span> 
+                                    <span class="clear">
+                                        <span class="block m-t-xs"> <strong class="font-bold">{{company}}</strong></span>
+                                        <span class="text-muted text-xs block">{{name}} {{surname}}</span>
+                                        <span class="text-muted text-xs block">{{title}}<b class="caret"></b></span>
+                                    </span>
                                 </a>
-                                
+
                                 <ul class="dropdown-menu animated fadeInRight m-t-xs">
                                     <li><a data-toggle="modal"  ng-click="openEditProfil(true)">Profile</a></li>
                                     <!-- <li><a >Settings</a></li> -->
@@ -136,7 +139,7 @@
                                     <li><a ng-click="logout()">Log out</a></li>
                                 </ul>
                         </div>
-                        
+
                         </li>
 
                     <!--Mini Navbar Account-->
@@ -150,7 +153,7 @@
                         </ul>
                     </li>
                     <!--End-->
-                
+
                     <li ng-click="openclosetab('projecttab')" ng-class="{'active':(projectactive)}" activate-tab>
                         <a><i class="fa fa-clone"></i> <span class="nav-label">Projects</span> <span class="fa arrow"></span></a>
                         <ul id="projecttab" class="nav nav-second-level collapse" >
@@ -168,7 +171,7 @@
                         <a ><i class="fa fa-comments"></i> <span class="nav-label">Messages</span> <span class="label label-danger pull-right">{{totalmessages}}</span></span></a>
                         <ul id="messagetab" class="nav nav-second-level collapse">
                             <li  ng-repeat='channel in channels'><a href="#/messaging/{{channel.project_id}}/{{channel.id}}"><span class="nav-label">{{channel.name}}</span> <span class="label label-default pull-right">{{channel.newmessages}}</span></a></li>
-                        </ul> 
+                        </ul>
                     </li>
 
                     <li ng-class="{'active':(teamactive)}" activate-tab>
@@ -190,9 +193,9 @@
                         </ul>
                     </li>
 
-                   
 
-                     
+
+
 
                 </ul>
                 <ul class="nav metismenu" id="side-menu" ng-if="isKeyAccount">
@@ -215,15 +218,15 @@
                         </li>
 
                         <li class="nav-header">
-                            <div class="dropdown profile-element"> 
+                            <div class="dropdown profile-element">
                                 <a data-toggle="dropdown" class="dropdown-toggle">
-                                    <span class="clear"> 
-                                        <span class="block m-t-xs"> <strong class="font-bold">{{company}}</strong></span> 
-                                        <span class="text-muted text-xs block">{{name}} {{surname}}</span> 
-                                        <span class="text-muted text-xs block">{{title}}<b class="caret"></b></span> 
-                                    </span> 
+                                    <span class="clear">
+                                        <span class="block m-t-xs"> <strong class="font-bold">{{company}}</strong></span>
+                                        <span class="text-muted text-xs block">{{name}} {{surname}}</span>
+                                        <span class="text-muted text-xs block">{{title}}<b class="caret"></b></span>
+                                    </span>
                                 </a>
-                                
+
                                 <ul class="dropdown-menu animated fadeInRight m-t-xs">
                                     <li><a data-toggle="modal"  ng-click="openEditProfil(true)">Profile</a></li>
                                     <!-- <li><a >Settings</a></li> -->
@@ -231,7 +234,7 @@
                                     <li><a ng-click="logout()">Log out</a></li>
                                 </ul>
                         </div>
-                        
+
                         </li>
 
                     <!--Mini Navbar Account-->
@@ -245,7 +248,7 @@
                         </ul>
                     </li>
                     <!--End-->
-                
+
                     <li ng-click="openclosetab('projecttab')" ng-class="{'active':(projectactive)}" activate-tab>
                         <a><i class="fa fa-clone"></i> <span class="nav-label">Projects</span> <span class="fa arrow"></span></a>
                         <ul id="projecttab" class="nav nav-second-level collapse" >
@@ -296,15 +299,15 @@
                         </li>
 
                         <li class="nav-header">
-                            <div class="dropdown profile-element"> 
+                            <div class="dropdown profile-element">
                                 <a data-toggle="dropdown" class="dropdown-toggle">
-                                    <span class="clear"> 
-                                        <span class="block m-t-xs"> <strong class="font-bold">{{company}}</strong></span> 
-                                        <span class="text-muted text-xs block">{{name}} {{surname}}</span> 
-                                        <span class="text-muted text-xs block">{{title}}<b class="caret"></b></span> 
-                                    </span> 
+                                    <span class="clear">
+                                        <span class="block m-t-xs"> <strong class="font-bold">{{company}}</strong></span>
+                                        <span class="text-muted text-xs block">{{name}} {{surname}}</span>
+                                        <span class="text-muted text-xs block">{{title}}<b class="caret"></b></span>
+                                    </span>
                                 </a>
-                                
+
                                 <ul class="dropdown-menu animated fadeInRight m-t-xs">
                                     <li><a data-toggle="modal"  ng-click="openEditProfil(true)">Profile</a></li>
                                     <!-- <li><a >Settings</a></li> -->
@@ -312,7 +315,7 @@
                                     <li><a ng-click="logout()">Log out</a></li>
                                 </ul>
                         </div>
-                        
+
                         </li>
 
                     <!--Mini Navbar Account-->
@@ -326,7 +329,7 @@
                         </ul>
                     </li>
                     <!--End-->
-                
+
                     <li ng-click="openclosetab('projecttab')" ng-class="{'active':(projectactive)}" activate-tab>
                         <a><i class="fa fa-clone"></i> <span class="nav-label">Projects</span> <span class="fa arrow"></span></a>
                         <ul id="projecttab" class="nav nav-second-level collapse" >
@@ -368,12 +371,12 @@
                     <div class="form-group mb0">
                         <select data-placeholder="Select Technologies" class="select2 chosen-select" multiple style="width:100%;" tabindex="2" ng-model="projectskills">
                             <option ng-repeat="skill in skills" value="{{skill}}">{{skill}} </option>
-                            
+
                         </select>
                     </div>
-                    
-                   
-                       
+
+
+
                 </div>
                 <div class="modal-footer">
                     <button type="button" class="btn btn-white" data-dismiss="modal">Close</button>
@@ -381,7 +384,7 @@
                 </div>
             </div>
         </div>
-    </div> 
+    </div>
 
       <!--modal edit profile-->
     <div class="modal inmodal fade" id="edit-profile-client" role="dialog" aria-hidden="true" style="overflow-y: scroll;">
@@ -1009,4 +1012,3 @@
 
 
 </div>
-    
