--- a/app/partials/login.html
+++ b/app/partials/login.html
@@ -5,28 +5,31 @@
             <div>
                 <h1 class="logo-name"><img src="img/logo-login-flexwork@2.png" width="85" height="75" alt="flexwork.io" title="flexwork.io"/></h1>
             </div>
+            <!--
             <h3>Welcome to flexwork.io</h3>
-            <p>Create your project and start your task</p>
+            <p>Create your project and start your ticket</p>-->
             <form class="m-t" role="form"  ng-submit="loginFunction()">
                 <div class="form-group">
-                    <input  class="form-control" placeholder="E-Mail" required="" ng-model="login">
+                    <input  class="form-control loginInputs" placeholder="E-Mail" required="" ng-model="login">
                 </div>
-                
-                <div class="form-group">
-                    <input type="password" class="form-control" placeholder="Password" required="" ng-model="password">
+
+                <div class="form-group mb5">
+                    <input type="password" class="form-control loginInputs" placeholder="Password" required="" ng-model="password">
                 </div>
-                <div class="form-group">
-                    <input type="checkbox" id="checkbox3" ng-model="stayloggedin" value="true">
-                    <label for="checkbox3">Keep me logged in</label>
+                <div class="input-group mb5">
+                    <div class="checkbox checkbox-primary">
+                        <input type="checkbox" id="checkbox3" ng-model="stayloggedin" value="true">
+                        <label for="checkbox3">Remember me</label>
+                    </div>
                 </div>
                 <button type="submit" class="btn btn-primary block full-width m-b" id="loginbtn">Login</button>
                 <div class="errormsg">{{errors}}</div>
-                
+
                 <!-- <a href="forgot-password-fxw.html"><small>Forgot password?</small></a> -->
                 <!--<div class="hr-line-solid"></div>
                 <p class="text-muted text-center"><small>Do not have an account?</small></p>
                 <a class="btn btn-sm btn-white btn-block" href="register-fxw.html">Request an account</a>-->
             </form>
-            <p class="m-t"><small> &copy;2015 &middot; <b>flexwork.io</b></small></p>
+            <p class="m-t ft-login mt20"><small> &copy;2015 - 2017 &middot; <b>flexwork.io</b></small></p>
         </div>
     </div>
