--- a/app/partials/hourreports.html
+++ b/app/partials/hourreports.html
@@ -66,7 +66,8 @@
                                               </div>
                                               <div class="select-year">
                                                   <select class="select2" id="selectedyear">
-                                                    <option value="2016" selected="selected">2016</option>
+                                                    <option value="2017" selected="selected">2017</option>
+                                                    <option value="2016">2016</option>
                                                     <option value="2015">2015</option>
                                                     <option value="2014">2014</option>
                                                     <option value="2013">2013</option>
