--- a/app/partials/side-bar.html
+++ b/app/partials/side-bar.html
@@ -660,7 +660,7 @@
                           <div class="ibox-content mt15" ng-if="isclient">
                             <div class="row">
                                <div class="col-md-12">
-                                 <h4>Company</h4>
+                                 <h4>Company2</h4>
                                  <div class="form-group">
                                      <input type="text" class="form-control" placeholder="Company Name" required="" ng-model="$parent.client_company_name">
                                  </div>
@@ -939,6 +939,18 @@
                                </div><!--col-md-->
                             </div><!--row-->
                           </div>
+                          <div class="ibox-content mt15" ng-if="isclient">
+                            <div class="row">
+                               <div class="col-md-12">
+                                 <h4>Connect Accounts</h4>
+                                 <span ng-if="noJiraAccount">
+                                    <h5 >Jira</h5>
+                                     <button ng-if="noJiraAccount" type="button" class="btn btn-white btn-sm" data-dismiss="modal" data-toggle="modal" data-target="#jira_form">+ Connect</button>
+                                     <button ng-if="!noJiraAccount" type="button" class="btn btn-white btn-sm" ng-click="unlikJiraAccount()">- Disconnect</button>
+                                </span>
+                                </div>
+                            </div>
+                        </div>
                           <!-- ibox-->
 
                       </div>
@@ -1006,7 +1018,54 @@
             </div>
         </div>
     </div>
+<div class="modal inmodal fade" id="jira_form" role="dialog"  aria-hidden="true" >
+        <div class="modal-dialog">
+            <div class="modal-content">
+                <div class="modal-header">
+                    <button type="button" class="close" data-dismiss="modal" data-toggle="modal" data-target="#edit-profile"><span aria-hidden="true">&times;</span><span class="sr-only">Close</span></button>
+                    <h4 class="modal-title"><i class="fa fa-lock modal-fa-icon"></i> Connect jira account</h4>
+                </div>
+                <div class="modal-body p0">
+                  <!--row2-->
+                  <div class="row">
+                      <!--user ibox-->
+                      <div class="col-lg-12">
+
+                        <div class="ibox-content pb0">
+                          <div class="row">
+                             <div class="col-md-12">
+                                  <div class="form-group">
+                                      <input type="text" class="form-control" placeholder="jira url eg:http://mydomain.atlassian.net" required="" ng-model="jira_url">
+                                  </div>
+                                 <div class="form-group">
+                                     <input type="text" class="form-control login-first-name" placeholder="Jira login" required="" ng-model="jira_login">
+                                     <input type="passeword" class="form-control login-last-name" placeholder="Jira passeword" required="" ng-model="Jira_passeword">
+                                     <div class="clear-both"></div>
+                                 </div>
+                             </div><!--col-md-->
+                          </div><!--row-->
+                        </div>
+                        <!-- ibox -->
+                      </div>
+                      <!-- col-lg--->
+                  </div>
+                  <!-- row -->
+                </div>
+                <div class="modal-footer">
+                    <div class="row">
+                        <div class="col-md-12">
+                            <div class="hr-line-solid"></div>
+                            <button type="button" class="btn btn-white" data-dismiss="modal" ng-click="openEditProfil(false)">Close</button>
+                            <button type="button" class="btn btn-primary" ng-click="saveJiraAccount()">Save</button>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+
 
 
 </div>
-    
+ 
+
